fixed issue with header (z-index)

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ header{
     top: 0;
     backdrop-filter: blur(8px);
     background-color: rgba(21, 24, 30, 0.4);
+    z-index: 100;
 }
 h1,h2,h3,h4,h5{
     font-weight: 700;
